--- a/build.gradle
+++ b/build.gradle
@@ -14,21 +14,20 @@ repositories {
 dependencies {
 
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
-    //    compile group: 'org.opencsv', name: 'opencsv', version: '4.2'
-    compile 'com.opencsv:opencsv:4.2'
+    compile group: 'com.opencsv', name: 'opencsv', version: '4.2'
     compile group: 'org.apache.opennlp', name: 'opennlp-tools', version: '1.9.0'
 
     //    dl4j
     compile group: 'org.deeplearning4j', name: 'deeplearning4j-core', version: '1.0.0-beta2'
     compile group: 'org.deeplearning4j', name: 'deeplearning4j-nn', version: '1.0.0-beta2'
+    compile group: 'org.deeplearning4j', name: 'deeplearning4j-nlp', version: '1.0.0-beta2'
+    compile "org.nd4j:nd4j-native-platform:1.0.0-beta2"
 
     //    Lucene
     compile group: 'org.apache.lucene', name: 'lucene-core', version: '7.4.0'
     compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '7.4.0'
     compile group: 'org.apache.lucene', name: 'lucene-codecs', version: '7.4.0'
     compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '7.4.0'
-
-    compile "org.nd4j:nd4j-native-platform:1.0.0-beta2"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
